# charm-microceph

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  rename.sh  requirements.txt  test-requirements.txt  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: build-and-test.yml  close-inactive-issues.yml  main.yaml  s2s-candidate-upgrade.yaml  scheduled-branch-tests.yaml
docs/how-to-guides/: adding-file-osds.md  adding-osds.md  enable-rgw.md  install-charmed-microceph.md  performing-cluster-maintenance.md
docs/tutorials/: getting-started.md
src/: .relation_handlers.py.swp  ceph.py  ceph_broker.py  ceph_nfs.py  ceph_rgw.py  charm.py  cluster.py  device_flags.py  maintenance.py  microceph.py  microceph_adopt_ceph.py  microceph_client.py  microceph_remote.py  radosgw.py  relation_handlers.py  storage.py  utils.py
terraform/microceph/: README.md  main.tf  outputs.tf  terragrunt.hcl  variables.tf  versions.tf
tests/: __init__.py  conftest.py
tests/bundles/: multi_node_juju_storage.yaml  noble-caracal.yaml
tests/functests/: __init__.py  conftest.py  test_wipe_osd.py
tests/helpers/: __init__.py  lxd.py
tests/integration/: conftest.py  helpers.py  test_charm.py  test_mon_addresses.py  test_network_config.py  test_nfs_binding.py  test_osd_devices_config.py  test_storage_waldb_config.py  test_terraform.py  test_upgrade_health_recovery.py  test_utils.py
tests/scripts/: bootstrap_sunbeam.sh  ci_helpers.sh  remote_integration_helpers.sh  run_sunbeam_e2e.sh
tests/selftests/: test_helpers.py  test_integration_config.py  test_sunbeam_upgrade.py
tests/sunbeam/: conftest.py  (+1 more)
(+27 files in other folders)
