[project]
name = "microceph"
version = "0.1.0"
requires-python = "~=3.12.0"
dependencies = [
    "cryptography",
    "ops<3.4",
    "pyroute2",
    "netifaces",
    "jsonschema",
    "tenacity",
    "jinja2",
    "pydantic>=2.12,<2.13",
    "cosl==0.0.55",
    "requests<2.32",
    "ops_sunbeam@git+https://opendev.org/openstack/sunbeam-charms#subdirectory=ops-sunbeam",
    "charms.ceph@git+https://github.com/canonical/ceph-charms#subdirectory=charms.ceph",
    "requests-unixsocket",
    "urllib3<2",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
markers = [
    "abort_on_fail: stop the test session immediately when the marked test fails",
    "smoke: quick integration checks",
    "incremental: treat tests in a class as dependent and skip the rest after first failure",
    "slow: tests that take longer",
]

# Formatting tools configuration
[tool.black]
line-length = 99

[tool.isort]
line_length = 99
profile = "black"

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107", "N818"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
docstring-convention = "google"
